# Travel-Plan-Permission

./: .gitignore  .markdownlint-cli2.yaml  .markdownlint.yaml  .project_modules.txt  CODEOWNERS  CONTRIBUTING.md  Issues.txt  README.md  autofix_report_enriched.json  codex-output.md  codex-prompt.md  coverage.json  package-lock.json  package.json  pyproject.toml  pytest-junit.xml  render.yaml  setup.cfg  workloop-state.md
.agents/: issue-798-ledger.yml  issue-806-ledger.yml  issue-951-ledger.yml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  WORKFLOW_ALIGNMENT.md  copilot-instructions.md  copilot-skills.md  dependabot.yml  labeler.yml  trip-planner-pinned-ref
.github/ISSUE_TEMPLATE/: feature.md  policy-lite-rule.md
.github/codex/: AGENT_INSTRUCTIONS.md
.github/scripts/: README.md  agents-guard.js  bot_comment_auth_coverage.js  decode_raw_input.py  fallback_split.py  github-api-with-retry.js  maint-post-ci.js
.github/workflows/: README.md  agents-63-issue-intake.yml  agents-70-orchestrator.yml  agents-72-codex-belt-worker-dispatch.yml  agents-80-pr-event-hub.yml  agents-81-gate-followups.yml  agents-auto-pilot.yml  agents-autofix-loop.yml  agents-chatgpt-sync-test.yml  agents-chatgpt-sync.yml  agents-guard.yml  agents-issue-intake.yml  agents-keepalive-loop.yml  agents-pr-meta.yml  agents-weekly-metrics.yml  auto-merge-docs.yml  autofix-versions.env  autofix.yml  backplane-conformance.yml  ci.yml  claude-code-review.yml  dependabot-auto-lock.yml  labeler.yml  lint.yml  main-ci.yml  maint-51-dependency-refresh.yml  maint-76-claude-code-review.yml  maint-coverage-guard.yml  maint-dependabot-auto-lock.yml  maint-render-liveness.yml  maint-sync-workflows.yml  pr-00-gate.yml  test-ci.yml  test-reusable.yml
.github/workflows-archive/: labeler-config.yml  labeler.yml
.venv-edit/: pyvenv.cfg
.venv-install/: pyvenv.cfg
.venv-install-check/: pyvenv.cfg
.venv-install-check/config/: excel_mappings.yaml
agents/: codex-102.md  codex-103.md  codex-104.md  codex-105.md  codex-106.md  codex-107.md  codex-1071.md  codex-108.md  codex-109.md  codex-111.md  codex-122.md  codex-128.md  codex-130.md  codex-131.md  codex-134.md  codex-135.md  codex-138.md  codex-262.md  codex-265.md  codex-267.md  codex-268.md  codex-269.md  codex-3.md  codex-327.md  codex-351.md  codex-412.md  codex-423.md  codex-51.md  codex-52.md  codex-53.md  codex-54.md  codex-55.md  codex-56.md  codex-57.md  codex-58.md  codex-59.md  codex-60.md  codex-61.md  codex-62.md  codex-63.md  (+28 more)
config/: excel_mappings.yaml  policy.yaml  providers.yaml  validation.yaml
docs/: DEPENDABOT_PR_ANALYSIS.md  DEPENDENCY_VERSION_TEST_STRATEGY.md  GOALS.md  IMMEDIATE_ACTION_PLAN.md  IMPLEMENTATION_SUMMARY.md  ORCHESTRATION_PLAN.md  accounting-integration.md  agent-integration-status.md  approval-workflow.md  audit-trail.md  baseline-kit-dependency.md  belt-automation-plan.md  ci-system-guide.md  demo-script.md  deployment.md  exception-policy.md  expense-workflow.md  field-mapping.md  langgraph_quickstart.md  local-testing-plan.md  needs-human.md  no-terminal-demo.md  plan.md  planner-integration-contract.md  planner-live-test-runbook.md  policy-api.md  policy-lite-checklist.md  provider-governance.md  rate-limiting.md  security-model.md  validation-rules.md  workflows.md
docs/contracts/: planner-integration.md
docs/reports/: baseline-coverage.md  issue-758-review-thread-resolution.md
docs/review-followups/: issue-758-pr83-review-thread-disposition.md  production-readiness-issues-2026-04-16.md
schemas/: expense_report.min.schema.json  trip_plan.min.schema.json
scripts/: __init__.py  audit_langgraph_ci_runtime_logs.py  audit_langgraph_issue_disposition.py  audit_langgraph_workflow_tests.py  audit_version_tests.py  audit_workflow_action_refs.py  audit_workflow_alignment.py  audit_workflow_pip_compile.py  check_local_env_freshness.py  coverage_report.py  finalize_organization_runtime_template.py  sync_test_dependencies.py  sync_tool_versions.py  sync_workflows.sh  validate_dependency_refresh_workflow.py  validate_dependency_test_setup.py  verify_install.py
scripts/git-hooks/: pre-commit
scripts/langchain/: capability_check.py  followup_issue_generator.py  issue_formatter.py  issue_optimizer.py  pr_verifier.py  progress_reviewer.py
src/travel_plan_permission/: __init__.py  approval.py  approval_packet.py  audit.py  canonical.py  cli.py  config_loader.py  conversion.py  cross_repo_smoke.py  demo_seed.py  export.py  http_service.py  intake_requirements.py  mapping.py  models.py  notification_preferences.py  planner_auth.py  planner_client.py  planner_service.py  planner_smoke.py  policy.py  policy_api.py  policy_lite.py  policy_versioning.py  portal_handoff.py  portal_review.py  prompt_flow.py  providers.py  rate_limit.py  receipts.py  review_workflow.py  security.py  snapshots.py  validation.py  workbook_canary.py  workbook_ooxml.py
templates/: Expense_Report_Form_FY2026_revised_Jan_2026.xlsx  travel_request_template.xlsx
tests/: conftest.py  orchestration_graph_test.py  test_dependency_version_alignment.py
tests/baseline/: README.md  __init__.py  adapter.py  catalog.yaml  conftest.py  invariants.py  requirements-baseline.txt  test_coverage_manifest.py  test_directional.py  test_golden.py  test_invariants.py
tests/fixtures/: canonical_trip_plan_realistic.json  sample_expense_report_minimal.json  sample_trip_plan_minimal.json  sample_trip_plan_rich.json  washington_dc_business_trip.json
tests/helpers/: version_utils.py
tests/python/: __init__.py  conftest.py  test_approval_engine.py  test_approval_packet.py  test_audit.py  test_audit_langgraph_ci_runtime_logs.py  test_audit_langgraph_issue_disposition.py  test_audit_langgraph_workflow_tests.py  test_audit_workflow_action_refs.py  test_audit_workflow_alignment.py  test_audit_workflow_pip_compile.py  test_canonical_flow.py  test_canonical_trip_plan.py  test_cli.py  test_coverage_reporting.py  test_cross_repo_smoke.py  test_dependency_declarations.py  test_dependency_sync.py  test_models.py  (+43 more)
tools/: coverage_guard.py  requirements-llm.txt  resolve_mypy_pin.py
(+56 files in other folders)
