[project]
name = "travel-plan-permission"
version = "0.1.0"
description = "Automate and make reproducible the travel plan approval and reimbursement process"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "stranske" }]
keywords = ["travel", "expense", "workflow", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0.2",
    "openpyxl>=3.1.5",
    "jinja2>=3.1.4",
    "reportlab>=4.2.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.11",
    "black>=24.0.0",
    "mypy>=1.19.1",
    "types-PyYAML>=6.0.12",
    "numpy>=1.24.0",
    "packaging>=23.0",
    "pandas>=2.0.0",
    "pyarrow>=10.0.0",
    "hypothesis>=6.0.0",
    "langgraph>=0.2.0",
]
ocr = [
    "Pillow>=10.0.0",
    "pytesseract>=0.3.10",
]
orchestration = [
    "langgraph>=0.2.0",
]

[project.scripts]
fill-spreadsheet = "travel_plan_permission.cli:main"
orchestration-demo = "travel_plan_permission.orchestration.example:main"

[build-system]
requires = []
build-backend = "tp_build_backend"
backend-path = ["tools/build_backend"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
travel_plan_permission = ["config/*.yaml", "templates/*.xlsx"]

[tool.pytest.ini_options]
testpaths = ["tests/python"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
fail_under = 80
show_missing = true

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["travel_plan_permission"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
