[metadata]
name = travel-plan-permission
version = 0.1.0
description = Automate and make reproducible the travel plan approval and reimbursement process
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = stranske
keywords = travel, expense, workflow, automation
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
python_requires = >=3.11
install_requires =
    pydantic>=2.0
    pyyaml>=6.0.2
    openpyxl>=3.1.5
    jinja2>=3.1.4
    reportlab>=4.2.5
package_dir =
    = src
packages = find:
include_package_data = True

[options.packages.find]
where = src

[options.package_data]
travel_plan_permission =
    config/*.yaml
    templates/*.xlsx

[options.extras_require]
dev =
    pytest>=8.3.4
    pytest-cov>=6.0.0
    ruff>=0.8.4
    mypy>=1.13.0
    types-PyYAML>=6.0.12
ocr =
    Pillow>=10.0.0
    pytesseract>=0.3.10

[options.entry_points]
console_scripts =
    fill-spreadsheet = travel_plan_permission.cli:main
